{
  "version": 4,
  "terraform_version": "0.12.31",
  "serial": 10,
  "lineage": "6a8627d5-95cd-9cd9-0c30-ac375920427d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cm-test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-cbf90ecb",
            "arn": "arn:aws:ec2:ap-northeast-1:080414913409:instance/i-034ccf0e85e4c7e30",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-0fd314e4994c59b75",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034ccf0e85e4c7e30",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "uchiyama_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03251629a7242290d",
            "private_dns": "ip-10-1-1-221.ap-northeast-1.compute.internal",
            "private_ip": "10.1.1.221",
            "public_ip": "18.179.198.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-033f66b3e7de78ad3",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b38ffc2e7e05e26",
            "tags": {
              "Name": "cm-test"
            },
            "tags_all": {
              "Name": "cm-test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09247c9e38f5d3942"
            ]
          },
          "dependencies": [
            "aws_security_group.adminTF",
            "aws_subnet.tf-public-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myTfGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:080414913409:internet-gateway/igw-023d0309c5f3e1b0b",
            "id": "igw-023d0309c5f3e1b0b",
            "owner_id": "080414913409",
            "vpc_id": "vpc-0138f490d76d281c1"
          },
          "dependencies": [
            "aws_vpc.myTfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-public-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:080414913409:route-table/rtb-0fb83c80c64c62e9d",
            "id": "rtb-0fb83c80c64c62e9d",
            "owner_id": "080414913409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023d0309c5f3e1b0b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0138f490d76d281c1"
          },
          "dependencies": [
            "aws_internet_gateway.myTfGW",
            "aws_vpc.myTfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-puclic-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07738e26084d0307a",
            "route_table_id": "rtb-0fb83c80c64c62e9d",
            "subnet_id": "subnet-09b38ffc2e7e05e26"
          },
          "dependencies": [
            "aws_internet_gateway.myTfGW",
            "aws_route_table.tf-public-route",
            "aws_subnet.tf-public-a",
            "aws_vpc.myTfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "adminTF",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:080414913409:security-group/sg-09247c9e38f5d3942",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09247c9e38f5d3942",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "adminTf",
            "name_prefix": "",
            "owner_id": "080414913409",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0138f490d76d281c1"
          },
          "dependencies": [
            "aws_vpc.myTfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-public-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:080414913409:subnet/subnet-09b38ffc2e7e05e26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b38ffc2e7e05e26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "080414913409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0138f490d76d281c1"
          },
          "dependencies": [
            "aws_vpc.myTfVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myTfVPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:080414913409:vpc/vpc-0138f490d76d281c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0f80e36b95d03ab6d",
            "default_route_table_id": "rtb-01c51523e978eff5e",
            "default_security_group_id": "sg-070a46ccbd026bdb0",
            "dhcp_options_id": "dopt-75132512",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0138f490d76d281c1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c51523e978eff5e",
            "owner_id": "080414913409",
            "tags": {
              "Name": "myTfVPC"
            },
            "tags_all": {
              "Name": "myTfVPC"
            }
          }
        }
      ]
    }
  ]
}